# brocoli-sh

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  shell.c  shell_data_structures.c  shell_data_structures.h  shell_ui.c  shell_ui.h
